[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Font/Memogram3.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/sprites/button-2.png" type="Texture" id=2]
[ext_resource path="res://menu/submenu/options.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/sfx/menu-select-button-182476.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/Font/memogram/Memogram.otf" type="DynamicFontData" id=5]
[ext_resource path="res://menu/transitions/transition_screen_1.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/Font/Memogram2.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/sprites/button-1.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/button-pressed.png" type="Texture" id=9]
[ext_resource path="res://menu/pause_menu.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 75
outline_color = Color( 0.839216, 0.839216, 0.839216, 1 )
font_data = ExtResource( 5 )

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource( 10 )
next_scene = "res://menu/main_menu.tscn"

[node name="TransitionScreen1" parent="." instance=ExtResource( 6 )]
layer = 2
visible = false

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1599, 0 )

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1418, 0 )

[node name="ColorRect" type="ColorRect" parent="Control/MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 0.85098 )

[node name="MarginContainer" type="MarginContainer" parent="Control/MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer/MarginContainer"]
margin_right = 1920.0
margin_bottom = 1080.0
rect_pivot_offset = Vector2( -704, 72 )
custom_constants/separation = 34
alignment = 1

[node name="Label" type="Label" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 396.0
margin_right = 1920.0
margin_bottom = 497.0
custom_fonts/font = ExtResource( 7 )
text = "The game is paused"
align = 1
valign = 1
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
margin_top = 531.0
margin_right = 1920.0
margin_bottom = 683.0
custom_constants/separation = 60
alignment = 1

[node name="PlayButton" type="TextureButton" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer" groups=["button"]]
margin_left = 228.0
margin_right = 676.0
margin_bottom = 152.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../OptionsButton")
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 2 )
texture_focused = ExtResource( 2 )

[node name="Label" type="Label" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/PlayButton"]
margin_right = 501.0
margin_bottom = 171.0
custom_colors/font_color_shadow = Color( 0.141176, 0.141176, 0.141176, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 1 )
text = "Resume  "
align = 1
valign = 1

[node name="OptionsButton" type="TextureButton" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer" groups=["button"]]
margin_left = 736.0
margin_right = 1184.0
margin_bottom = 152.0
focus_neighbour_top = NodePath("../PlayButton")
focus_neighbour_bottom = NodePath("../QuitButton")
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 2 )
texture_focused = ExtResource( 2 )

[node name="Label2" type="Label" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsButton"]
margin_top = 4.0
margin_right = 501.0
margin_bottom = 175.0
custom_colors/font_color_shadow = Color( 0.141176, 0.141176, 0.141176, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 1 )
text = "Options  "
align = 1
valign = 1

[node name="QuitButton" type="TextureButton" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer" groups=["button"]]
margin_left = 1244.0
margin_right = 1692.0
margin_bottom = 152.0
focus_neighbour_top = NodePath("../OptionsButton")
focus_neighbour_bottom = NodePath("../PlayButton")
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 2 )
texture_focused = ExtResource( 2 )

[node name="Label3" type="Label" parent="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/QuitButton"]
margin_right = 501.0
margin_bottom = 171.0
custom_colors/font_color_shadow = Color( 0.141176, 0.141176, 0.141176, 1 )
custom_constants/shadow_offset_x = 6
custom_constants/shadow_offset_y = 3
custom_fonts/font = SubResource( 1 )
text = "Quit   "
align = 1
valign = 1

[node name="FlavorText" type="Label" parent="Control/MarginContainer/MarginContainer/VBoxContainer"]
visible = false
margin_top = 666.0
margin_right = 1920.0
margin_bottom = 735.0
custom_fonts/font = ExtResource( 1 )
align = 1
valign = 2

[node name="Options" parent="." instance=ExtResource( 3 )]
visible = false
margin_left = 328.0
margin_top = 170.0
margin_right = -238.0
margin_bottom = -110.0

[node name="SelectSFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
bus = "SFX"

[connection signal="pressed" from="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Control/MarginContainer/MarginContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="closedMenu" from="Options" to="." method="_on_Options_closedMenu"]
